# goldborne-gails-dataroom

./: .env.example  .gitignore  README.md  netlify.toml  package.json  pyproject.toml  qa-ui-cleanup-report.md  writeup.md
.github/workflows/: submission-check.yml
app/: streamlit_app.py
backend/: requirements.txt
backend/app/: config.py  db.py  main.py  models.py  openai_client.py  schemas.py
backend/data/: charge_facts.json  financial_facts.json
backend/tests/: test_api.py  test_charge_eval_checks.py  test_charge_processing.py  test_company_facts.py  test_financial_accuracy.py  test_ingestion_manifest.py  test_retrieval.py  test_smoke_contract.py  test_submission_gate.py  test_verifier.py
data/: source_manifest.json
data/inbox/: README.md
data/seed/: gails_seed.json
dataroom/: manifest.json  manifest.schema.json  source_notes.md
dataroom/processed/: ch-charge-0005.processing_error.json  ch-charge-0006.processing_error.json  ch-parent-accounts-2023.processing_error.json  ch-parent-accounts-2024.processing_error.json  ch-parent-accounts-2025.processing_error.json  ch_charge_0005.md  ch_charge_0006.md  ch_charges_register.md  ch_psc_06055393.md  (+7 more)
docs/: openclaw.md
frontend/: package-lock.json  package.json  tailwind.config.ts
scripts/: build_dataroom.py  check_frontend_display_labels.mjs  extract_charges.py  extract_financials.py  ingest_companies_house.py  process_documents.py  review_charge_facts.py  review_financial_facts.py  run_evals.py  run_local_smoke.sh  test_submission.py  verify_production.sh
tests/: test_assistant.py  test_manifest.py
(+43 files in other folders)
